# sc-cli-py

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
src/sc_api/: __init__.py  api.py  cli_manager.py  constants.py  logger.py  models.py  runner.py
tests/: test_integration.py
