[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-cli-py"
version = "0.1.0"
description = "A Python API wrapper for the Scalable CLI tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lukas", email = "lukas-contact@proton.me" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "requests>=2.28.0",
    "platformdirs>=3.0.0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.3",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
