[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-cli-py"
version = "0.1.1"
description = "A Python API wrapper for the Scalable CLI tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lukas", email = "lukas-contact@proton.me" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "requests>=2.28.0",
    "platformdirs>=3.0.0",
    "pydantic>=2.10.6",
]

[project.urls]
Homepage = "https://github.com/lukas-schwab/sc-cli-py"
Repository = "https://github.com/lukas-schwab/sc-cli-py"
Issues = "https://github.com/lukas-schwab/sc-cli-py/issues"

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.3",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
